# src

./: .gitignore  README.md  loader.py  main.py  preprocessing.py  pyproject.toml  visualization.py
mining/: __init__.py  association.py  classification.py  clustering.py  evaluation.py
