[project]
name = "mineracao-de-dados"
version = "0.1.0"
description = "Ferramenta geral de mineração de dados"
requires-python = ">=3.13"

dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.0",
    "mlxtend>=0.23.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
